Moved location getter to it's own file and made the weather card detect location automatically

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/now.css"/>
 	
 	<script src="lib/suncalc.js"></script>
+	<script src="js/location.js"></script>
 	<script src="js/banner.js"></script>
 </head>
 <body>
