Added background page for recently closed tabs, rewrote cards completely for modularity and loose coupling and all that good shit, changed the google maps icon, and reorganized a few things

--- a/index.html
+++ b/index.html
@@ -6,41 +6,37 @@
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:100,300,400,500" type="text/css"/>
 	<link rel="stylesheet" type="text/css" href="css/now.css"/>
 	
-	<script src="lib/suncalc.js"></script>
+	<script src="vendor/suncalc.js"></script>
 	<script src="js/location.js"></script>
-	<script src="js/banner.js"></script>
+	<script src="js/headerchanger.js"></script>
 </head>
 <body>
 
 <div id="scrollbox">
-
-<header>
-	<form action="https://encrypted.google.com/search" method="get">
-		<input id="search" type="text" name="q" placeholder="Search Google" autofocus x-webkit-speech/>
-	</form>
-</header>
-
-<article class="card suggestions">
-	<ul>
-		<li>cake</li>
-		<li>cakes</li>
-	</ul>
-</article>
-
-<div class="columns">
-	<div class="leftColumn"></div>
-	<div class="rightColumn"></div>
+	
+	<header>
+		<form action="https://encrypted.google.com/search" method="get">
+			<input id="search" type="text" name="q" placeholder="Search Google" autofocus x-webkit-speech/>
+		</form>
+	</header>
+	
+	<article class="card suggestions"></article>
+	
+	<div class="columns"></div>
+	
 </div>
 
-</div>
+<script src="vendor/zepto.js"></script>
+<script src="vendor/zepto.getscript.js"></script>
+<script src="lib/cards.js"></script>
 
-<script src="lib/zepto.js"></script>
-<script src="js/now.js"></script>
-
-<script src="cards/googleservices.js"></script>
-<script src="cards/weather.js"></script>
 <script src="cards/apps.js"></script>
-<!-- <script src="cards/clock.js"></script> -->
+<script src="cards/clock.js"></script>
+<script src="cards/googleservices.js"></script>
 <script src="cards/topsites.js"></script>
+<script src="cards/weather.js"></script>
+
+<script src="js/search.js"></script>
+<script src="js/now.js"></script>
 </body>
 </html>
