Fixed search suggestion regression

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</form>
 	</header>
 	
-	<article class="card suggestions"></article>
+	<article class="card suggestions"><ul></ul></article>
 	
 	<div class="columns"></div>
 	
