Rewrote pretty much everything to add configuration magic, modularity, etc

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>New Tab</title>
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:100,300,400,500" type="text/css"/>
-	<link rel="stylesheet" type="text/css" href="css/now.css"/>
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:100,300,400,500">
+	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
+	<link rel="stylesheet" href="css/now.css">
 	
 	<script src="vendor/suncalc.js"></script>
 	<script src="js/location.js"></script>
