--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	
 	<title>New Tab</title>
+	
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:100,300,400,500">
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
-	<link rel="stylesheet" href="css/now.css">
+	
+	<link rel="stylesheet" href="css/base.css">
+	<link rel="stylesheet" href="css/cards.css">
+	<link rel="stylesheet" href="css/suggestions.css">
+	
+	<link rel="stylesheet" href="css/apps.css">
+	<link rel="stylesheet" href="css/clock.css">
+	<link rel="stylesheet" href="css/googleservices.css">
+	<link rel="stylesheet" href="css/topsites.css">
+	<link rel="stylesheet" href="css/weather.css">
 	
 	<script src="vendor/suncalc.js"></script>
 	<script src="js/location.js"></script>
