Enlarged config icon, fixed search suggestions, and added a recently closed tab card

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" href="css/googleservices.css">
 	<link rel="stylesheet" href="css/topsites.css">
 	<link rel="stylesheet" href="css/weather.css">
+	<link rel="stylesheet" href="css/recent.css">
 	
 	<script src="vendor/suncalc.js"></script>
 	<script src="js/location.js"></script>
@@ -47,6 +48,7 @@
 <script src="cards/googleservices.js"></script>
 <script src="cards/topsites.js"></script>
 <script src="cards/weather.js"></script>
+<script src="cards/recent.js"></script>
 
 <script src="js/search.js"></script>
 <script src="js/now.js"></script>
