Made card configuration persistent via localStorage. Yay.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <script src="cards/weather.js"></script>
 <script src="cards/recent.js"></script>
 
+<script src="js/config.js"></script>
 <script src="js/search.js"></script>
 <script src="js/now.js"></script>
 </body>
