Added location and weather caching

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<link rel="stylesheet" href="css/recent.css">
 	
 	<script src="vendor/suncalc.js"></script>
+	<script src="lib/cache.js"></script>
 	<script src="js/location.js"></script>
 	<script src="js/headerchanger.js"></script>
 </head>
