--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
 	
 </div>
 
-<script src="vendor/zepto.js"></script>
-<script src="vendor/zepto.getscript.js"></script>
+<div id="globalbuttons">
+	<i class="defaultntp icon-th" title="Default New Tab Page"></i>
+</div>
+
+<script src="vendor/jquery.js"></script>
+<script src="vendor/jquery.sortable.js"></script>
 <script src="vendor/modernizr.js"></script>
 <script src="lib/cards.js"></script>
 
@@ -55,5 +59,6 @@
 <script src="js/config.js"></script>
 <script src="js/search.js"></script>
 <script src="js/now.js"></script>
+<script src="js/globalbuttons.js"></script>
 </body>
 </html>
