Added a trash box for trashy card removal

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 	
 	<article class="card suggestions"><ul></ul></article>
 	
+	<div class="trash"></div>
+	
 	<div class="columns"></div>
 	
 </div>
