Added a reset button and made dragging ignore input boxes

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 </div>
 
 <div id="globalbuttons">
+	<i class="reset icon-refresh" title="Reset Everything"></i>
 	<i class="defaultntp icon-th" title="Default New Tab Page"></i>
 </div>
 
