Added upgrade handling. Fixes #9

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/cards.css">
 	<link rel="stylesheet" href="css/suggestions.css">
+	<link rel="stylesheet" href="css/notification.css">
 	
 	<link rel="stylesheet" href="css/apps.css">
 	<link rel="stylesheet" href="css/clock.css">
@@ -36,6 +37,8 @@
 	
 	<article class="card suggestions"><ul></ul></article>
 	
+	<div id="notification"></div>
+	
 	<div class="trash"></div>
 	
 	<div class="columns"></div>
@@ -60,6 +63,7 @@
 <script src="cards/recent.js"></script>
 
 <script src="js/config.js"></script>
+<script src="js/version.js"></script>
 <script src="js/search.js"></script>
 <script src="js/now.js"></script>
 <script src="js/globalbuttons.js"></script>
