Incremented the version to 1.2.1

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 <script src="js/config.js"></script>
 <script src="js/version.js"></script>
 <script src="js/search.js"></script>
-<script src="js/now.js"></script>
 <script src="js/globalbuttons.js"></script>
+<script src="js/bookmarks.js"></script>
+<script src="js/now.js"></script>
 </body>
 </html>
