--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="css/cards.css">
 	<link rel="stylesheet" href="css/suggestions.css">
 	<link rel="stylesheet" href="css/notification.css">
+	<link rel="stylesheet" href="css/bookmarks.css">
 	
 	<link rel="stylesheet" href="css/apps.css">
 	<link rel="stylesheet" href="css/clock.css">
@@ -30,6 +31,7 @@
 <div id="scrollbox">
 	
 	<header>
+		<ul class="bookmarksbar"></ul>
 		<form action="https://encrypted.google.com/search" method="get">
 			<input id="search" type="text" name="q" placeholder="Search Google" autofocus x-webkit-speech/>
 		</form>
@@ -65,8 +67,8 @@
 <script src="js/config.js"></script>
 <script src="js/version.js"></script>
 <script src="js/search.js"></script>
-<script src="js/globalbuttons.js"></script>
 <script src="js/bookmarks.js"></script>
 <script src="js/now.js"></script>
+<script src="js/globalbuttons.js"></script>
 </body>
 </html>
