Added option to enable or disable bookmarks bar. Fixes #4

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
 <div id="globalbuttons">
 	<i class="reset icon-refresh" title="Reset Everything"></i>
+	<i class="bookmarks icon-star" title="Toogle Bookmarks Bar"></i>
 	<i class="defaultntp icon-th" title="Default New Tab Page"></i>
 </div>
 
